{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 32,
  "lineage": "f7a20f12-ae82-141b-0be1-8f4599e4d25e",
  "resources": [
    {
      "module": "module.elb_fe",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:loadbalancer/app/turbo/615192a941be3574",
            "arn_suffix": "app/turbo/615192a941be3574",
            "desync_mitigation_mode": "defensive",
            "dns_name": "turbo-1149687069.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:loadbalancer/app/turbo/615192a941be3574",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "turbo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ab69feb91141ab5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037f38804f177951a"
              },
              {
                "subnet_id": "subnet-0a7e1756d31823bff"
              }
            ],
            "subnets": [
              "subnet-037f38804f177951a",
              "subnet-0a7e1756d31823bff"
            ],
            "tags": {
              "Name": "turbo"
            },
            "tags_all": {
              "Name": "turbo"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb_fe",
            "module.vpc.aws_subnet.load_balancer_fe_1",
            "module.vpc.aws_subnet.load_balancer_fe_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb_fe",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:listener/app/turbo/615192a941be3574/52527686fe0e60ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:targetgroup/ecs/f1334fd9250d9183",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:listener/app/turbo/615192a941be3574/52527686fe0e60ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:loadbalancer/app/turbo/615192a941be3574",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_fe.aws_lb.elb",
            "module.elb_fe.aws_lb_target_group.ecs_fe",
            "module.vpc.aws_security_group.alb_fe",
            "module.vpc.aws_subnet.load_balancer_fe_1",
            "module.vpc.aws_subnet.load_balancer_fe_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb_fe",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:targetgroup/ecs/f1334fd9250d9183",
            "arn_suffix": "targetgroup/ecs/f1334fd9250d9183",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:932782693588:targetgroup/ecs/f1334fd9250d9183",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "turbo"
            },
            "tags_all": {
              "Name": "turbo"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b24f42e04bda891b",
            "association_id": "eipassoc-0585bf4ccd09f176a",
            "domain": "vpc",
            "id": "eipalloc-0b24f42e04bda891b",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-054278743c7ef4f15",
            "private_dns": "ip-10-0-3-68.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.68",
            "public_dns": "ec2-54-251-87-127.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.87.127",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:internet-gateway/igw-07daa358831bf2039",
            "id": "igw-07daa358831bf2039",
            "owner_id": "932782693588",
            "tags": {
              "Name": "demo1-gw"
            },
            "tags_all": {
              "Name": "demo1-gw"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b24f42e04bda891b",
            "association_id": "eipassoc-0585bf4ccd09f176a",
            "connectivity_type": "public",
            "id": "nat-08fd2cae413d95cec",
            "network_interface_id": "eni-054278743c7ef4f15",
            "private_ip": "10.0.3.68",
            "public_ip": "54.251.87.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-042a7a5a52da5ba19"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:route-table/rtb-0892859e9d191e200",
            "id": "rtb-0892859e9d191e200",
            "owner_id": "932782693588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fd2cae413d95cec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:route-table/rtb-07e20ce6c63f7381c",
            "id": "rtb-07e20ce6c63f7381c",
            "owner_id": "932782693588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07daa358831bf2039",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_internet_gateway.internet_gw",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee66d4952671cb9",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-02a104ee2613832f5"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.ecs_be_1",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07479471f8cd8a8fd",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-02fa0201460f27b09"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.ecs_be_2",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083e614a8b96e3fa4",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-090a70a8e0e48b4f7"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.ecs_fe_1",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bc1c658bfb4fa68",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-0fc6d588da72207d5"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.ecs_fe_2",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a15360f7d5a1a6",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-0b4b62c491809d35e"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_subnet.rds_1",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2eca62cd8d644aa",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-0f0b85b3167c1c347"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.load_balancer_be_1",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3b3ec3c0cadce8e",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-073c8fe98d5b83162"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.load_balancer_be_2",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3aade4486f667d2",
            "route_table_id": "rtb-0892859e9d191e200",
            "subnet_id": "subnet-08c02e8ac267ec4dc"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_eip.nat",
            "module.rds.module.vpc.aws_nat_gateway.nat",
            "module.rds.module.vpc.aws_route_table.private_rt",
            "module.rds.module.vpc.aws_subnet.nat",
            "module.rds.module.vpc.aws_subnet.rds_2",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016fe2796f8bd1453",
            "route_table_id": "rtb-07e20ce6c63f7381c",
            "subnet_id": "subnet-05700e6af45541388"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_internet_gateway.internet_gw",
            "module.rds.module.vpc.aws_route_table.public_rt",
            "module.rds.module.vpc.aws_subnet.load_balancer_fe_1",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d88fa3e161567bba",
            "route_table_id": "rtb-07e20ce6c63f7381c",
            "subnet_id": "subnet-059b9c6b037098fb3"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_internet_gateway.internet_gw",
            "module.rds.module.vpc.aws_route_table.public_rt",
            "module.rds.module.vpc.aws_subnet.load_balancer_fe_2",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-03b311a95aab2f1e7",
            "description": "Allow traffic from ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b311a95aab2f1e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c4ba5ee34b9cfa9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c4ba5ee34b9cfa9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "turbo-be-alb",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_security_group.alb_fe",
            "module.rds.module.vpc.aws_security_group.private_ecs_fe",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-04a61f035f148287c",
            "description": "Allow public internet to connect into load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a61f035f148287c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "turbo-alb",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0e5f37939aa6a7f1e",
            "description": "Security group for ECR VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5f37939aa6a7f1e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05c4ba5ee34b9cfa9",
                  "sg-0ae5e725d027736e3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecr-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_security_group.alb_fe",
            "module.rds.module.vpc.aws_security_group.private_ecs_be",
            "module.rds.module.vpc.aws_security_group.private_ecs_fe",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ecs_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0ae5e725d027736e3",
            "description": "Allow request redirect from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae5e725d027736e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "turbo-be",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ecs_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-05c4ba5ee34b9cfa9",
            "description": "Allow request redirect from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c4ba5ee34b9cfa9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a61f035f148287c"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "turbo-fe",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_security_group.alb_fe",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-08974a623bfb59426",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08974a623bfb59426",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow request from ecs backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae5e725d027736e3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "turbo-rds",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.vpc.aws_security_group.private_ecs_be",
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_be_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-02a104ee2613832f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a104ee2613832f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-be-1"
            },
            "tags_all": {
              "Name": "ecs-be-1"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_be_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-02fa0201460f27b09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fa0201460f27b09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-be-2"
            },
            "tags_all": {
              "Name": "ecs-be-2"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_fe_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-090a70a8e0e48b4f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.105.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a70a8e0e48b4f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fe-1"
            },
            "tags_all": {
              "Name": "ecs-fe-1"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_fe_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0fc6d588da72207d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.107.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc6d588da72207d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fe-2"
            },
            "tags_all": {
              "Name": "ecs-fe-2"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_be_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0f0b85b3167c1c347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0b85b3167c1c347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-be-1"
            },
            "tags_all": {
              "Name": "load-balancer-be-1"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_be_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-073c8fe98d5b83162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.113.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073c8fe98d5b83162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-be-2"
            },
            "tags_all": {
              "Name": "load-balancer-be-2"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_fe_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-05700e6af45541388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05700e6af45541388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-fe-1"
            },
            "tags_all": {
              "Name": "load-balancer-fe-1"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_fe_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-059b9c6b037098fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b9c6b037098fb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-fe-2"
            },
            "tags_all": {
              "Name": "load-balancer-fe-2"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-042a7a5a52da5ba19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042a7a5a52da5ba19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0b4b62c491809d35e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.109.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b62c491809d35e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-1"
            },
            "tags_all": {
              "Name": "rds-1"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-08c02e8ac267ec4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.115.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c02e8ac267ec4dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-2"
            },
            "tags_all": {
              "Name": "rds-2"
            },
            "vpc_id": "vpc-068b466d32cc7320d"
          },
          "dependencies": [
            "module.rds.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:vpc/vpc-068b466d32cc7320d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001cc5d3d0d75545a",
            "default_route_table_id": "rtb-0888698da52c78194",
            "default_security_group_id": "sg-070f5d09e80b05fe3",
            "dhcp_options_id": "dopt-0d8a42a62355f3697",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068b466d32cc7320d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0888698da52c78194",
            "owner_id": "932782693588",
            "tags": {
              "Name": "turbo-vpc"
            },
            "tags_all": {
              "Name": "turbo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f36902ba028a3f",
            "association_id": "eipassoc-0a3fa497d34b862ff",
            "domain": "vpc",
            "id": "eipalloc-0c0f36902ba028a3f",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c01cf86af0b96560",
            "private_dns": "ip-10-0-3-104.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.104",
            "public_dns": "ec2-18-142-209-150.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.209.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:internet-gateway/igw-0a031feab5a96ff2b",
            "id": "igw-0a031feab5a96ff2b",
            "owner_id": "932782693588",
            "tags": {
              "Name": "demo1-gw"
            },
            "tags_all": {
              "Name": "demo1-gw"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f36902ba028a3f",
            "association_id": "eipassoc-0a3fa497d34b862ff",
            "connectivity_type": "public",
            "id": "nat-074a59f57e029eb36",
            "network_interface_id": "eni-0c01cf86af0b96560",
            "private_ip": "10.0.3.104",
            "public_ip": "18.142.209.150",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a294098b34ac41a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:route-table/rtb-04b56b4e765540b41",
            "id": "rtb-04b56b4e765540b41",
            "owner_id": "932782693588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074a59f57e029eb36",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:route-table/rtb-0cd0932d15df59282",
            "id": "rtb-0cd0932d15df59282",
            "owner_id": "932782693588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a031feab5a96ff2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c779270f6cb469b",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-08b4345dd6a3d6498"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.ecs_be_1",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063dcb587cb0dff0c",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-0c7efe0ce790e4d3f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.ecs_be_2",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b92b98e2341ef6e",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-032eca195c9edd5a5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.ecs_fe_1",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbb068db8850e04f",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-0c0ba5f71286678c2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.ecs_fe_2",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052699e25647f305a",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-01faa06b817e4f246"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_subnet.rds_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf092da6f5d2cd9",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-089e060b2489dc225"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.load_balancer_be_1",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5634a6bfb410a1",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-0b60ec08809af572b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.load_balancer_be_2",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97e8e1025d1843c",
            "route_table_id": "rtb-04b56b4e765540b41",
            "subnet_id": "subnet-0a09e814dd9c4eee2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.nat",
            "module.vpc.aws_subnet.rds_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e81a7aa00723827",
            "route_table_id": "rtb-0cd0932d15df59282",
            "subnet_id": "subnet-0a7e1756d31823bff"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.load_balancer_fe_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dcbd3a4e44a8d30",
            "route_table_id": "rtb-0cd0932d15df59282",
            "subnet_id": "subnet-037f38804f177951a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.load_balancer_fe_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0100470e099d0e6fa",
            "description": "Allow traffic from ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0100470e099d0e6fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5b109d88b58d080"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5b109d88b58d080"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "turbo-be-alb",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb_fe",
            "module.vpc.aws_security_group.private_ecs_fe",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-00ab69feb91141ab5",
            "description": "Allow public internet to connect into load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ab69feb91141ab5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "turbo-alb",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0e217ef797d2313c7",
            "description": "Security group for ECR VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e217ef797d2313c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c5b109d88b58d080",
                  "sg-0d3506f767c2487db"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecr-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb_fe",
            "module.vpc.aws_security_group.private_ecs_be",
            "module.vpc.aws_security_group.private_ecs_fe",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ecs_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0d3506f767c2487db",
            "description": "Allow request redirect from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3506f767c2487db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "turbo-be",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ecs_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0c5b109d88b58d080",
            "description": "Allow request redirect from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5b109d88b58d080",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ab69feb91141ab5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "turbo-fe",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb_fe",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:security-group/sg-0222747fa0463f850",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0222747fa0463f850",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow request from ecs backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3506f767c2487db"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "turbo-rds",
            "name_prefix": "",
            "owner_id": "932782693588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private_ecs_be",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_be_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-08b4345dd6a3d6498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b4345dd6a3d6498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-be-1"
            },
            "tags_all": {
              "Name": "ecs-be-1"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_be_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0c7efe0ce790e4d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7efe0ce790e4d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-be-2"
            },
            "tags_all": {
              "Name": "ecs-be-2"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_fe_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-032eca195c9edd5a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.105.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032eca195c9edd5a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fe-1"
            },
            "tags_all": {
              "Name": "ecs-fe-1"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_fe_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0c0ba5f71286678c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.107.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0ba5f71286678c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fe-2"
            },
            "tags_all": {
              "Name": "ecs-fe-2"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_be_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-089e060b2489dc225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e060b2489dc225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-be-1"
            },
            "tags_all": {
              "Name": "load-balancer-be-1"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_be_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0b60ec08809af572b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.113.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b60ec08809af572b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-be-2"
            },
            "tags_all": {
              "Name": "load-balancer-be-2"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_fe_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0a7e1756d31823bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7e1756d31823bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-fe-1"
            },
            "tags_all": {
              "Name": "load-balancer-fe-1"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "load_balancer_fe_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-037f38804f177951a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037f38804f177951a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load-balancer-fe-2"
            },
            "tags_all": {
              "Name": "load-balancer-fe-2"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-01a294098b34ac41a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a294098b34ac41a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-01faa06b817e4f246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.109.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01faa06b817e4f246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-1"
            },
            "tags_all": {
              "Name": "rds-1"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:subnet/subnet-0a09e814dd9c4eee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.115.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a09e814dd9c4eee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932782693588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-2"
            },
            "tags_all": {
              "Name": "rds-2"
            },
            "vpc_id": "vpc-03fbf8ddc7234b748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932782693588:vpc/vpc-03fbf8ddc7234b748",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0564fac3675ba3c9c",
            "default_route_table_id": "rtb-0d951eb7d5845357f",
            "default_security_group_id": "sg-01f2d43b4c2b2fd80",
            "dhcp_options_id": "dopt-0d8a42a62355f3697",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fbf8ddc7234b748",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d951eb7d5845357f",
            "owner_id": "932782693588",
            "tags": {
              "Name": "turbo-vpc"
            },
            "tags_all": {
              "Name": "turbo-vpc"
            }
          }
        }
      ]
    }
  ]
}